*otopi-1.2.1 (08 May 2014)

  08 May 2014; Alon Bar-Lev <alonbl@redhat.com> +otopi-1.2.1.ebuild:
  Version bump

  27 Mar 2014; Alon Bar-Lev <alonbl@redhat.com> otopi-9999.ebuild:
  Fix copyright

*otopi-1.2.0 (27 Mar 2014)

  27 Mar 2014; Alon Bar-Lev <alonbl@gentoo.org> +otopi-1.2.0.ebuild,
  -otopi-1.0.1.ebuild, -otopi-1.1.2.ebuild, -otopi-1.1.3.ebuild,
  otopi-1.1.4.ebuild:
  Version bump

*otopi-1.1.4 (04 Mar 2014)

  04 Mar 2014; Alon Bar-Lev <alonbl@gentoo.org> +otopi-1.1.4.ebuild:
  Version bump

*otopi-1.1.3 (04 Mar 2014)

  04 Mar 2014; Alon Bar-Lev <alonbl@gentoo.org> +otopi-1.1.3.ebuild:
  Version bump

  02 Dec 2013; Alon Bar-Lev <alonbl@gentoo.org> otopi-1.0.1.ebuild,
  otopi-1.1.2.ebuild, otopi-9999.ebuild:
  python fixups

*otopi-1.1.0 (27 Aug 2013)

  27 Aug 2013; Alon Bar-Lev <alonbl@redhat.com> +otopi-1.1.0.ebuild,
  otopi-9999.ebuild:
  Version bump

  26 Aug 2013; Alon Bar-Lev <alonbl@gentoo.org> otopi-9999.ebuild:
  Add local version support

  18 Apr 2013; Alon Bar-Lev <alonbl@gentoo.org> otopi-1.0.1.ebuild,
  otopi-9999.ebuild:
  move gettext to DEPEND

  03 Apr 2013; Alon Bar-Lev <alonbl@redhat.com> +metadata.xml:
  setup layout